jose_centeno/session-02/01/mariadb-services.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: exercise-01
spec:
  serviceName: nginx
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      tier: backend
      type: database
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
        type: database
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
      - image: bitnami/mariadb:10.1
        name: mariadb
        livenessProbe:
          tcpSocket:
            port: mariadb
          initialDelaySeconds: 15
          periodSeconds: 20
        ports: 
          - name: mariadb
            containerPort: 3306
        volumeMounts:
            - name: mariadb-vol
              mountPath: /bitnami
      volumes:
        - name: mariadb-vol
          persistentVolumeClaim:
            claimName: mariadb-pvc
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: mariadb
  namespace: exercise-01
  labels:
    app: mariadb
    tier: backend
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mariadb
    tier: backend
  type: ClusterIP
