jose_centeno/session-02/01/nginx-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: exercise-01
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: nginx
