jose_centeno/session-02/01/wordpress-services.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myblog-wordpress
  namespace: exercise-01
  labels:
    app: myblog-wordpress
    tier: frontend
    track: stable
    type: app
spec:
  serviceName: nginx
  replicas: 1
  selector:
    matchLabels:
      app: myblog-wordpress
      tier: frontend
      track: stable
      type: app
  template:
    metadata:
      labels:
        app: myblog-wordpress
        tier: frontend
        track: stable
        type: app
    spec:
      containers:
      - image: bitnami/wordpress:4.9.8
        name: wordpress
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
        ports: 
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
        volumeMounts:
          - name: myblog-wordpress-vol
            mountPath: /bitnami
      volumes:
        - name: myblog-wordpress-vol
          persistentVolumeClaim:
            claimName: myblog-wordpress-pvc
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: myblog-wordpress
  namespace: exercise-01
  labels:
    app: myblog-wordpress
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http
  selector:
    app: myblog-wordpress
    tier: frontend
  sessionAffinity: ClientIP
  sessionAffinityConfig: 
    clientIP: 
      timeoutSeconds: 300
