jose_centeno/session-02/01/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-mariadb
  namespace: exercise-01
spec:
  podSelector:
    matchLabels:
      app: mariadb
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
            type: app
      ports:
        - protocol: TCP
          port: 3306
